@@ -20,10 +20,13 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:3000",
-                "http://localhost:5173",
-                "http://localhost:8080"
+        // Dev-friendly origins for local web, Expo web, and LAN devices (phone/WebView).
+        configuration.setAllowedOriginPatterns(List.of(
+                "http://localhost:*",
+                "http://127.0.0.1:*",
+                "http://192.168.*.*:*",
+                "http://172.*.*.*:*",
+                "http://10.*.*.*:*"
         ));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
@@ -55,6 +58,7 @@ public class SecurityConfig {
                                 "/v3/api-docs/**",
                                 "/webjars/**",
                                 "/api/guest/**",
+                                "/api/organizations/**",
                                 "/websocket-test.html",
                                 "/ws/chat",
                                 "/ws/chat/**",
@@ -66,7 +70,7 @@ public class SecurityConfig {
                                 "/static/**",
                                 "/api/funds/**",
                                 "/api/fund-statuses",
-                                "/api/fund-donations",
+                                "/api/fund-donations/**",
                                 "/api/payment/**"
                         ).permitAll()
 
